--- a/estudogrid.html
+++ b/estudogrid.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>grid</title>
     <link rel="stylesheet" href="estudo.css">
 </head>
 <body>
     <section class="meu-site">
-        <div class="menu">Menu</div>
-        <div class="lado">Lado</div>
-        <div class="principal">Principal</div>
-        <div class="rodape">Rodapé</div>
+       <div class="barra">
+         Barra
+    </div>
 
-    </section>
+       <div class="lado">
+        Lado
+     </div>
 
+        <div class="principal">
+            Principal
+     </div>
+
+        <div class="rodape">
+            Rodape
+   </div>
+</section>
 </body>
 </html>
