--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <footer class="rodape">   
         @Gastão Vidigal<br>
         Turma do Segundo I<br>
-        @daniel  :c
+        @arthur  :c
     </footer>
 
 </body>
