--- a/rock.html
+++ b/rock.html
@@ -73,7 +73,7 @@
     <footer class="rodape">  
         @Gastão Vidigal<br>
         Turma do Segundo I<br>
-        @daniel  :c
+        @arthur :c
     </footer>
 
    </body>
